# local-rerank-service

./: .env.example  .gitignore  README.md  pyproject.toml
app/: auth.py  config.py  main.py  model_manager.py  schemas.py
app/routers/: health.py  models.py  rerank.py
scripts/: e2e_test.py  run_server.ps1  setup.ps1  verify_env.py
